--- a/public/menu.html
+++ b/public/menu.html
@@ -1055,6 +1055,7 @@
                     });
                 }
             });
+        } // <--- ВОТ ПРАВИЛЬНОЕ МЕСТО ДЛЯ ЗАКРЫВАЮЩЕЙ СКОБКИ
 
         async function main() {
             if (!Telegram.WebApp.initData) {
