--- a/public/menu.html
+++ b/public/menu.html
@@ -281,11 +281,8 @@
         <div id="challenge-container"></div>
         <hr style="border-color: rgba(255,255,255,0.1); margin: 15px 0;">
       
-        <a href="/checkpoint" style="text-decoration: none; display: block; margin-bottom: 15px;">
-            <div style="background-color: #2c2c2e; border-radius: 12px; padding: 20px; text-align: center;">
-                <h2 style="margin: 0 0 10px; font-size: 18px; color: #ffcc00;">Марафон "Чекпоинт"</h2>
-                <p style="margin: 0; font-size: 14px; color: #b0b0b0;">Пройди все испытания и получи главную награду!</p>
-                </div>
+        <a id="checkpoint-link" href="/checkpoint" style="text-decoration: none; display: block; margin-bottom: 15px;" class="hidden">
+            <img src="https://i.postimg.cc/6p39wgzJ/1200-324.png" alt="Марафон Чекпоинт" style="width: 100%; border-radius: 12px; display: block;">
         </a>
         <hr style="border-color: rgba(255,255,255,0.1); margin: 15px 0;">
       
