--- a/public/menu.html
+++ b/public/menu.html
@@ -281,7 +281,7 @@
         <div id="challenge-container"></div>
         <hr style="border-color: rgba(255,255,255,0.1); margin: 15px 0;">
       
-        <a id="checkpoint-link" href="/checkpoint" style="text-decoration: none; display: block; margin-bottom: 15px;" class="hidden">
+        <a id="checkpoint-link" href="/checkpoint" style="text-decoration: none; display: block; margin-bottom: 15px;">
             <img src="https://i.postimg.cc/6p39wgzJ/1200-324.png" alt="Марафон Чекпоинт" style="width: 100%; border-radius: 12px; display: block;">
         </a>
         <hr style="border-color: rgba(255,255,255,0.1); margin: 15px 0;">
