--- a/public/menu.html
+++ b/public/menu.html
@@ -1063,7 +1063,7 @@
             try {
                 const day = new Date().getDay();
                 const questButton = dom.questChooseBtn;
-                if (day === 0 || day === 1) {
+                if (day === 0 || day === 1) { // Воскресенье или Понедельник
                     questButton.classList.remove('twitch-theme');
                     questButton.classList.add('telegram-theme');
                     questButton.innerHTML = '<i class="fa-brands fa-telegram"></i> ВЫХОДНЫЕ ИСПЫТАНИЯ';
@@ -1077,7 +1077,13 @@
                     dom.newPromoNotification.classList.remove('hidden');
                 }
 
-                userData = await makeApiRequest("/api/v1/user/me");
+                // ИЗМЕНЕНИЕ: Делаем один запрос, который возвращает всё
+                const dashboardData = await makeApiRequest("/api/v1/user/me");
+                
+                // ИЗМЕНЕНИЕ: Разбираем полученные данные на части
+                userData = dashboardData.profile || {}; 
+                const challengeData = dashboardData.challenge;
+                
                 const isGuest = !userData || !userData.full_name;
 
                 if (isGuest) {
@@ -1089,10 +1095,8 @@
 
                 document.getElementById('ticketStats').textContent = userData.tickets || 0;
   
-                const [questsDataResp, challengeData] = await Promise.all([
-                    makeApiRequest("/api/v1/quests/list"),
-                    makeApiRequest("/api/v1/user/challenge/status")
-                ]);
+                // ИЗМЕНЕНИЕ: Запрашиваем список квестов отдельно
+                const questsDataResp = await makeApiRequest("/api/v1/quests/list");
 
                 allQuests = questsDataResp || [];
                 questsForRoulette = allQuests.filter(q => q.quest_type && q.quest_type.startsWith('automatic') && !q.is_completed);
@@ -1106,9 +1110,11 @@
                     dom.questChooseContainer.classList.add('hidden');
                 }
 
+                // ИЗМЕНЕНИЕ: Используем challengeData, полученные из /user/me
                 if (challengeData) {
                     renderChallenge(challengeData, !userData.twitch_id);
                 } else {
+                    // Передаём информацию о кулдауне, если она есть в профиле
                     renderChallenge({ cooldown_until: userData.challenge_cooldown_until }, !userData.twitch_id);
                 }
 
