--- a/public/menu.html
+++ b/public/menu.html
@@ -238,6 +238,9 @@
 </head>
 <body>
 
+  <div style="background-color: red; color: white; text-align: center; padding: 10px; font-size: 18px; font-weight: bold;">
+  ТЕСТОВАЯ ВЕРСИЯ - 12345
+</div>
   <div id="loader-overlay" class="loader-overlay">
     <div class="spinner"></div>
   </div>
