--- a/public/menu.html
+++ b/public/menu.html
@@ -238,8 +238,8 @@
 </head>
 <body>
 
-  <div style="background-color: red; color: white; text-align: center; padding: 10px; font-size: 18px; font-weight: bold;">
-  ТЕСТОВАЯ ВЕРСИЯ - 12345
+  <div style="background-color: red; color: white; text-align: center; padding: 4px; font-size: 5px; font-weight: bold;">
+  Челленджи пока что не работают(
 </div>
   <div id="loader-overlay" class="loader-overlay">
     <div class="spinner"></div>
