--- a/public/menu.html
+++ b/public/menu.html
@@ -472,6 +472,10 @@
             if (countdownIntervals[intervalKey]) {
                 clearInterval(countdownIntervals[intervalKey]);
             }
+            // СТАЛО: Добавляем проверку, что элемент таймера вообще существует, чтобы избежать ошибок
+            if (!timerElement) { 
+                return;
+            }
 
             const endTime = new Date(expiresAt).getTime();
             
@@ -488,32 +492,33 @@
                 if (distance < 0) {
                     clearInterval(countdownIntervals[intervalKey]);
                     delete countdownIntervals[intervalKey];
+                    
                     if (onEndCallback) {
                         onEndCallback();
-                } else {
-                    const cardElement = currentTimerElement.closest('.quest-card');
-                    if (cardElement && intervalKey === 'challenge') { // Убедимся, что это таймер челленджа
-                        currentTimerElement.remove(); // Удаляем таймер
-
-                        // Создаем новую кнопку
-                        const completeButton = document.createElement('button');
-                        completeButton.id = 'check-challenge-progress-btn';
-                        completeButton.className = 'claim-reward-button'; // Используем стиль кнопки "Забрать награду"
-                        completeButton.innerHTML = '<i class="fa-solid fa-flag-checkered"></i> <span>Завершить</span>';
-
-                        // Добавляем кнопку в карточку
-                        cardElement.appendChild(completeButton);
-                    } else {
-                        // Стандартное поведение для других таймеров
-                        currentTimerElement.textContent = "Время вышло!";
+                    } 
+                    // СТАЛО: Добавляем блок для завершения челленджа
+                    else if (intervalKey === 'challenge') {
+                        const cardElement = currentTimerElement.closest('.quest-card');
+                        if (cardElement) {
+                           currentTimerElement.remove();
+                           const completeButton = document.createElement('button');
+                           completeButton.id = 'check-challenge-progress-btn';
+                           completeButton.className = 'claim-reward-button';
+                           completeButton.innerHTML = '<i class="fa-solid fa-flag-checkered"></i> <span>Завершить</span>';
+                           cardElement.appendChild(completeButton);
+                        }
+                    } 
+                    // СТАЛО: Убираем "Время вышло" для заданий, чтобы исправить визуальный баг
+                    else if (intervalKey.startsWith('quest_')) {
+                        currentTimerElement.textContent = "Задание истекло";
                     }
-                }
+
                     if (intervalKey === 'challenge_cooldown') {
-                        // --- FIX: Replaced main() with a silent refresh to prevent loop ---
                         refreshDataSilently();
                     }
                     return;
                 }
+
                 const d = Math.floor(distance / 86400000);
                 const h = Math.floor((distance % 86400000) / 3600000);
                 const m = Math.floor((distance % 3600000) / 60000);
